--- a/card.css
+++ b/card.css
@@ -27,8 +27,8 @@
 
     h4 {
         text-align: center;
-        //-webkit-text-fill-color: rgba(0, 200, 200, 0.1);
-        -webkit-background-clip: text;
+        -webkit-text-fill-color: rgba(0, 200, 200, 0.1);
+        //-webkit-background-clip: text;
         font-family: 'Allura', cursive;
         padding: -2%;
         font-size: 19px;
